[tool.poetry]
name = "project1-barsukov-mikhail-m25-555"
version = "0.1.0"
description = "Labyrinth game project"
authors = ["Mikhail Barsukov <youremail@example.com>"]
readme = "README.md"
packages = [
    { include = "labyrinth_game" },
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


